--- a/index.html
+++ b/index.html
@@ -721,10 +721,14 @@ state.n3 = (getRandomInt(100,0));
              if (state.Hard_mode == 1){
              state.x ++;
              state.x ++;
+             state.x ++;
+             state.x ++;
              state.x2 ++;
              }
              else {
              state.x ++;
+             state.x ++;
+             state.x ++;        
              state.x2 ++;
              }
              }
