--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@ state.n3 = (getRandomInt(100,0));
              }
              }
 
-            f (state.n == state.n4){
+            if (state.n == state.n4){
              if (state.Hard_mode == 1){
              state.x ++;
              state.x ++;
