--- a/index.html
+++ b/index.html
@@ -995,7 +995,7 @@ state.n3 = (getRandomInt(100,0));
             
             else{
             if(state.x > 20){
-                document.getElementById('message').innerText="you have some potenial to be a math genius you just need to try harder";  
+                document.getElementById('message').innerText="good!";  
             }
             else{
             if(state.x > 10){
