--- a/index.html
+++ b/index.html
@@ -986,7 +986,7 @@ state.n3 = (getRandomInt(100,0));
         document.getElementById('mydiv4').hidden=true;
         
         if (state.x > 44){
-            document.getElementById('message').innerText="Amazing!!!";  
+            document.getElementById('message').innerText="Perfect score on the hardest settings!, WOW";  
         }
         else{
             if(state.x > 30){
